<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ControlsActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/abl_device"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_35sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_scrollFlags="scroll|enterAlways"
        android:background="@color/white">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/tb_device"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            app:layout_scrollFlags="scroll|enterAlways">

            <ImageView
                android:id="@+id/iv_back_home"
                android:layout_width="@dimen/_35sdp"
                android:layout_height="match_parent"
                android:scaleType="fitXY"
                android:src="@drawable/ic_back"/>

            <TextView
                android:id="@+id/tv_name_device"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:textSize="22dp"
                android:textColor="@color/black"
                android:text="@string/tv_name_device"/>

        </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/abl_device"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_display_view"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintHeight_percent="0.4"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:visibility="invisible"
            android:background="@color/bg_display">

            <TextView
                android:id="@+id/tv_display_temp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:textSize="@dimen/_80sdp"
                android:textColor="@color/black"
                android:text="26"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@id/tv_display_temp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.397"
                android:textSize="@dimen/_20sdp"
                android:text="@string/tv_do_c" />

            <ImageView
                android:id="@+id/iv_mode"
                android:layout_width="@dimen/_20sdp"
                android:layout_height="@dimen/_20sdp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@id/tv_display_temp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.7"
                android:src="@drawable/ic_cooling"/>

            <TextView
                android:id="@+id/tv_mode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@id/iv_mode"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.7"
                android:textSize="@dimen/_14sdp"
                android:textColor="@color/black"
                android:text="@string/tv_mode_cooling"/>

            <TextView
                android:id="@+id/tv_speed_fan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginBottom="@dimen/_20sdp"
                android:layout_marginStart="@dimen/_10sdp"
                android:textColor="@color/black"
                android:text="@string/tv_speed_auto"/>


        </androidx.constraintlayout.widget.ConstraintLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/_1sdp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cl_display_view"
            android:background="@color/line_horizontal"/>
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintHeight_percent="0.6"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cl_display_view"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent">

            <FrameLayout
                android:id="@+id/fl_contain_power_on"
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layout_constraintHeight_percent="0.3"
                app:layout_constraintWidth_percent="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:focusable="true"
                android:clickable="true"
                android:background="?android:attr/selectableItemBackground">

                <ImageView
                    android:layout_width="@dimen/_40sdp"
                    android:layout_height="@dimen/_40sdp"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_power"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center|bottom"
                    android:gravity="center"
                    android:textSize="@dimen/_16sdp"
                    android:textColor="@color/black"
                    android:text="@string/tv_power_on"/>
            </FrameLayout>

            <View
                android:layout_width="@dimen/_1sdp"
                android:layout_height="0dp"
                app:layout_constraintHeight_percent="0.3"
                app:layout_constraintStart_toEndOf="@id/fl_contain_power_on"
                app:layout_constraintTop_toTopOf="parent"
                android:background="@color/line_horizontal" />

            <FrameLayout
                android:id="@+id/fl_contain_power_off"
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layout_constraintHeight_percent="0.3"
                app:layout_constraintWidth_percent="0.5"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:focusable="true"
                android:clickable="true"
                android:background="?android:attr/selectableItemBackground">

                <ImageView
                    android:layout_width="@dimen/_40sdp"
                    android:layout_height="@dimen/_40sdp"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_power"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center|bottom"
                    android:gravity="center"
                    android:textSize="@dimen/_16sdp"
                    android:textColor="@color/black"
                    android:text="@string/tv_power_off"/>
            </FrameLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/_1sdp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/fl_contain_power_on"
                android:background="@color/line_horizontal"/>

            <FrameLayout
                android:id="@+id/fl_contain_reduce_temp"
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layout_constraintHeight_percent="0.3"
                app:layout_constraintWidth_percent="0.33"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/fl_contain_power_on"
                android:focusable="true"
                android:clickable="true"
                android:background="?android:attr/selectableItemBackground">

                <ImageView
                    android:layout_width="@dimen/_40sdp"
                    android:layout_height="@dimen/_40sdp"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_reduce_temp"/>

            </FrameLayout>


            <FrameLayout
                android:id="@+id/fl_contain_temp_text"
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layout_constraintHeight_percent="0.3"
                app:layout_constraintWidth_percent="0.33"
                app:layout_constraintStart_toStartOf="@id/fl_contain_reduce_temp"
                app:layout_constraintTop_toBottomOf="@id/fl_contain_power_on"
                app:layout_constraintEnd_toEndOf="@id/fl_contain_increased_temp"
                android:focusable="true"
                android:clickable="true"
                android:background="?android:attr/selectableItemBackground"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/tv_temp"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_20sdp" />
            </FrameLayout>

            <FrameLayout
                android:id="@+id/fl_contain_increased_temp"
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layout_constraintHeight_percent="0.3"
                app:layout_constraintWidth_percent="0.33"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/fl_contain_power_on"
                android:focusable="true"
                android:clickable="true"
                android:background="?android:attr/selectableItemBackground">

                <ImageView
                    android:layout_width="@dimen/_40sdp"
                    android:layout_height="@dimen/_40sdp"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_increased_temp"/>
            </FrameLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/_1sdp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/fl_contain_reduce_temp"
                android:background="@color/line_horizontal"/>

            <FrameLayout
                android:id="@+id/fl_contain_speed"
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layout_constraintHeight_percent="0.3"
                app:layout_constraintWidth_percent="0.3333333"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/fl_contain_reduce_temp">

                <TextView
                    android:id="@+id/tv_contain_speed"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:focusable="true"
                    android:clickable="true"
                    android:background="?android:attr/selectableItemBackground"
                    android:textSize="@dimen/_20sdp"
                    android:textColor="@color/black"
                    android:text="@string/tv_speed"/>
            </FrameLayout>

            <FrameLayout
                android:id="@+id/fl_contain_swing"
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layout_constraintHeight_percent="0.3"
                app:layout_constraintWidth_percent="0.3333333"
                app:layout_constraintStart_toEndOf="@id/fl_contain_speed"
                app:layout_constraintTop_toBottomOf="@id/fl_contain_increased_temp"
                android:background="@color/enable_false">

                <TextView
                    android:id="@+id/tv_contain_swing"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:focusable="true"
                    android:clickable="true"
                    android:background="?android:attr/selectableItemBackground"
                    android:textSize="@dimen/_20sdp"
                    android:textColor="@color/black"
                    android:text="@string/tv_swing"/>
            </FrameLayout>

            <FrameLayout
                android:id="@+id/fl_contain_mode"
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layout_constraintHeight_percent="0.3"
                app:layout_constraintWidth_percent="0.3333333"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/fl_contain_increased_temp">

                <TextView
                    android:id="@+id/tv_contain_mode"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:focusable="true"
                    android:clickable="true"
                    android:background="?android:attr/selectableItemBackground"
                    android:textSize="@dimen/_20sdp"
                    android:textColor="@color/black"
                    android:text="@string/tv_mode"/>
            </FrameLayout>

            <View
                android:layout_width="@dimen/_1sdp"
                android:layout_height="0dp"
                app:layout_constraintHeight_percent="0.3"
                app:layout_constraintStart_toEndOf="@id/fl_contain_speed"
                app:layout_constraintTop_toBottomOf="@id/fl_contain_reduce_temp"
                android:background="@color/line_horizontal" />

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/_1sdp"
                app:layout_constraintStart_toStartOf="@id/fl_contain_speed"
                app:layout_constraintTop_toBottomOf="@id/fl_contain_speed"
                android:background="@color/line_horizontal"/>

            <View
                android:layout_width="@dimen/_1sdp"
                android:layout_height="0dp"
                app:layout_constraintHeight_percent="0.3"
                app:layout_constraintStart_toEndOf="@id/fl_contain_swing"
                app:layout_constraintTop_toBottomOf="@id/fl_contain_reduce_temp"
                android:background="@color/line_horizontal" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>